@@ -305,7 +305,8 @@ abstract class CItemGeneral extends CApiService {
 				$params = $itemKey->getParameters();
 
 				if (!str_in_array($itemKey->getKeyId(), array('grpmax', 'grpmin', 'grpsum', 'grpavg'))
-						|| count($params) != 4
+						|| count($params) > 4 || count($params) < 3
+						|| (count($params) == 3 && $params[2] !== 'last')
 						|| !str_in_array($params[2], array('last', 'min', 'max', 'avg', 'sum', 'count'))) {
 					self::exception(ZBX_API_ERROR_PARAMETERS,
 						_s('Key "%1$s" does not match <grpmax|grpmin|grpsum|grpavg>["Host group(s)", "Item key",'.
@@ -314,9 +315,10 @@ abstract class CItemGeneral extends CApiService {
 			}
 
 			// type of information
-			if ($fullItem['type'] == ITEM_TYPE_AGGREGATE && $fullItem['value_type'] != ITEM_VALUE_TYPE_FLOAT
-					&& $fullItem['value_type'] != ITEM_VALUE_TYPE_UINT64) {
-				self::exception(ZBX_API_ERROR_PARAMETERS, _('Type of information must be "Numeric (float)" for aggregate items.'));
+			if ($fullItem['type'] == ITEM_TYPE_AGGREGATE && $fullItem['value_type'] != ITEM_VALUE_TYPE_UINT64
+					&& $fullItem['value_type'] != ITEM_VALUE_TYPE_FLOAT) {
+					self::exception(ZBX_API_ERROR_PARAMETERS,
+						_('Type of information must be "Numeric (unsigned)" or "Numeric (float)" for aggregate items.'));
 			}
 
 			// log
